--- a/format/templates/CastleTemplate/template-dark-text.html
+++ b/format/templates/CastleTemplate/template-dark-text.html
@@ -23,6 +23,21 @@
     background-size: cover; 
  }
 
+.page{
+    padding: 0;
+}
+
+.text {
+    background: black;
+    color: #ffffff;
+    padding: 12px;
+    margin-top: 400px;
+}
+
+.link {
+    color: #5D7CC8;
+}
+
             </style>
 
 <script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="EnterTheCastle" tags="" position="912,53" size="100,100">Вы прибыли к замку поздно ночью. Крупные нетопыри уже летали над башнями в свете полной луны. Их противный писк был слышен за сотни шагов.
